ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    # Ajusta la clase de Ingress según la que tengas instalada en tu clúster
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: web.cloud-native-santo-domingo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
